# Dogleg

./: Dogleg.cabal
src/Numeric/: Dogleg.hs
