name:                Dogleg
version:             0.1.1
synopsis:            Powell's "dogleg" nonlinear optimization algorithm.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (c) Anthony Cowley 2012
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Dogleg
  build-depends:       base >=4.6 && < 5, vector >= 0.10, linear >=0.4,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010